--- a/0x03-queuing_system_in_js/package.json
+++ b/0x03-queuing_system_in_js/package.json
@@ -23,7 +23,9 @@
         "@babel/node": "^7.8.0",
         "@babel/preset-env": "^7.8.2",
         "@babel/register": "^7.8.0",
+        "axios": "^1.7.8",
         "chai": "^4.2.0",
+        "date-fns": "^4.1.0",
         "eslint": "^6.8.0",
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-plugin-import": "^2.31.0",
